# MAPS_PROJECT

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  requirements-legacy.txt
.github/workflows/: ci.yaml  slow-tests.yaml
AGL/: AGL_TMLR.py
MARL/MAPPO-ATTENTIOAN/: eval_meltingpot.sh  run_mppo_attention.sh  train_meltingpot.sh
METTA/metta_MAPS/metta/agent/: metta_agent.py
METTA/metta_MAPS/tools/: train.py
METTA/metta_MAPS/wandb_carbs/wandb_carbs.egg-info/: PKG-INFO
SARL/: SARL_Training_Optimized.sh  SARL_Training_Standard.sh
config/: maps.yaml  paths.yaml
config/env/: blindsight.yaml
config/env/marl/: chemistry.yaml  commons_harvest_closed.yaml  commons_harvest_partnership.yaml  territory_inside_out.yaml
config/experiments/: factorial_2x2.yaml  factorial_marl.yaml
config/training/: agl.yaml  blindsight.yaml  marl.yaml  sarl.yaml  sarl_cl.yaml
docs/: TODO.md  install_linux.md  install_marl_drac.md  install_tamia.md
docs/plans/: plan-20260418-sprint07-sarl-tamia.md  plan-20260419-review-and-reproduce.md  plan-20260420-d28-rg003-fix.md  plan-20260421-phase-e-marl.md
docs/reports/: sprint-04b-report.md  sprint-06-report.md  sprint-07-profile.md  sprint-08-d22b-simclr-decision.md  sprint-08-phase-b-summary.md  sprint-08-phase-c-summary.md
docs/reproduction/: deviations.md  experiment_matrix.md  handover_marl_outputs.md  paper_equations_extracted.md  paper_tables_extracted.md  paper_targets_extracted.md  paper_vs_code_audit.md
docs/reviews/: agl-data.md  agl-trainer.md  blindsight-data.md  blindsight-eval-metric-audit.md  blindsight-trainer.md  cascade.md  energy_tracker.md  first_order_mlp.md  losses.md  marl-architecture.md  marl-env.md  marl-maps-additions.md  marl-scope-decisions.md  public_api.md  rg002-wager-gap-investigation.md  rg003-ablation-sweep.md  rg003-resolution.md  sarl-cl-loss-weighting.md  sarl-cl-model.md  sarl-cl-trainer.md  sarl-cl-training-loop.md  sarl-data.md  sarl-evaluate.md  sarl-losses.md  sarl-model.md  sarl-rollout.md  sarl-trainer.md  sarl-training-loop.md  second_order.md  utils.md
docs/sprints/: README.md  sprint-00-remise-en-route.md  sprint-01-dedup-and-prune.md  sprint-02-extract-maps-core.md  sprint-03-config-first.md  sprint-04-seeding-logging-split.md  sprint-04b-rl-split-and-legacy-delete.md  sprint-05-tests-and-ci.md  sprint-06-reproduction-perceptual.md  sprint-07-reproduction-sarl.md  sprint-08-reproduction-perceptual-closeout.md
scripts/: aggregate_perceptual.py  aggregate_sarl.py  analyze_profile.py  bench_sarl.py  run_agl.py  run_blindsight.py  run_marl.py  run_sarl.py  run_sarl_cl.py
scripts/slurm/: aggregate.sh  agl_array.sh  bench_sarl.sh  blindsight_array.sh  common.sh  marl_array.sh  marl_bench_e17b.sh  marl_smoke.sh  marl_smoke_e16.sh  marl_validate_e17b3.sh  monitor.sh  profile_sarl.sh  sarl_array.sh  sarl_cl_phase_f.sh  sarl_phase_f.sh  smoke_sarl.sh  submit_chained.sh
src/maps/: __init__.py
src/maps/components/: __init__.py  cascade.py  losses.py  second_order.py
src/maps/experiments/: __init__.py
src/maps/experiments/agl/: __init__.py  data.py  pool.py  trainer.py
src/maps/experiments/blindsight/: __init__.py  data.py  trainer.py
src/maps/experiments/marl/: __init__.py  act.py  data.py  encoder.py  env.py  policy.py  rnn.py  runner.py  setting.py  trainer.py  util.py  valuenorm.py
src/maps/experiments/sarl/: __init__.py  data.py  evaluate.py  losses.py  model.py  rollout.py  trainer.py  training_loop.py
src/maps/experiments/sarl_cl/: __init__.py  loss_weighting.py  model.py  (+2 more)
src/maps/networks/: __init__.py  first_order_mlp.py
src/maps/utils/: __init__.py  config.py  energy_tracker.py  logging_setup.py  paths.py  seeding.py
tests/integration/: test_agl_full_pipeline.py  test_agl_smoke.py  test_blindsight_smoke.py
tests/integration/sarl/: test_training_loop_smoke.py
tests/integration/sarl_cl/: test_training_loop_smoke.py
tests/parity/: _reference_agl.py  _reference_agl_pretrain.py  _reference_agl_training.py  _reference_blindsight.py  _reference_blindsight_pretrain.py  test_agl_pretrain.py  test_agl_reference.py  test_agl_training.py  test_blindsight_pretrain.py  test_blindsight_reference.py  test_marl_buffer_parity.py  test_marl_forward_parity.py  test_marl_update_parity.py
tests/parity/sarl/: _reference_sarl.py  test_tier1_forward.py  test_tier2_buffer.py  test_tier3_update.py
tests/parity/sarl_cl/: __init__.py  _reference_sarl_cl.py  test_tier1_forward.py  test_tier3_update.py
tests/unit/components/: test_cascade.py  test_losses.py  test_second_order.py
tests/unit/scripts/: test_run_marl_cli.py
tests/unit/utils/: test_config.py  test_logging_setup.py  test_paths.py  test_seeding.py
(+30 files in other folders)
